--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
+<!--
+
+이걸보는사람이있나요??
+
+만약봤으면 DM주세요
+-> kooo_39 //다용도 밐서
+// 어케사람이름이유틸리티블렌더ㅋㅋ
+
+츄파춥스여도 하나 보내드림
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
+	<title>밐서</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>Hatsne Miku</p>
+ <h1>다용도 밐서<h1>
+<!-- h1 제목, h2 부제목, h3 문단, // 필요하면쓸거임h4, h5, h6 -->
+ <h2>자기소개용 페이지 입니다. 종종 업데이트 될 지도 모릅니다.</h2>
+ <h3>소개</h3>
+<!-- 코하루 릿카의 자기소개를 삽입할까 생각중 -->
+ <h3>관심분야</h3>
+ <h3>음악</h3>
+  <p>!Hatsne Miku!</p>
 </body>
 </html>
+	 
+<!--
+
+24. 07. 22. 월 제작 // 군대 휴가중인데 이러고있음 ㅋㅋ
+
+-->
