--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 <!-- h1 제목, h2 부제목, h3 문단, // 필요하면쓸거임h4, h5, h6 -->
  <h2>자기소개용 페이지 입니다. 종종 업데이트 될 지도 모릅니다.</h2>
  <h3>소개</h3>
-<!-- 코하루 릿카의 자기소개를 삽입할까 생각중 -->
+	 <!-- 코하루 릿카의 자기소개를 삽입할까 생각중 //https://www.youtube.com/watch?v=Go0HOEVn83E -->
+	 <iframe width="560" height="315" src="https://www.youtube.com/embed/Go0HOEVn83E?si=fJjSoNlLsRUttP8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	 <p><자기소개 - 코하루 릿카(라이브P)></p>
+	 
 <p><br>안녕하세요. 다용도 밐서입니다.
 <br><br>'다용도'라는 이름에 걸맞게 온 사방에 관심이 많은 사람입니다.
 <br><br>트윗 대부분처럼 보컬로이드를 비롯한 음원합성엔진 음악 및 창작물에 관심이 많으며 충동구매로 테토와 릿카 SV도 보유 증입니다. 이외에도 J-POP이나 60 - 70년대 락, 80 - 90년대 동구권 락 등 상당히 짬뽕입니다.
@@ -34,9 +37,14 @@
 <br>(특이 예 : 미츠네 하쿠 등)
 <br><br>트위터에서 오신 여러분도 다른 여러 경로로 오신 여러분도 환영합니다.
 <br><br>감사합니다.<br><br></p>
+	 
  <h3>관심분야</h3>
+	 
  <h3>음악</h3>
+	 
   <p>!Hatsne Miku!</p>
+	 
+ <h3>밐빵이 옷 만들기</h3>
 </body>
 </html>
 	 
