--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  <h2>자기소개용 페이지 입니다. 종종 업데이트 될 지도 모릅니다.</h2>
  <h3>소개</h3>
 	 <!-- 코하루 릿카의 자기소개를 삽입할까 생각중 //https://www.youtube.com/watch?v=Go0HOEVn83E -->
-	 <iframe width="560" height="315" src="https://www.youtube.com/embed/Go0HOEVn83E?si=fJjSoNlLsRUttP8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="text-align: center;"></iframe>
+	 <div align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/Go0HOEVn83E?si=fJjSoNlLsRUttP8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 	 <p style="text-align: center;"><자기소개 - 코하루 릿카(라이브P)></p>
 	 
 <p><br>안녕하세요. 다용도 밐서입니다.
