--- a/index.html
+++ b/index.html
@@ -37,14 +37,22 @@
 <br>(특이 예 : 미츠네 하쿠 등)
 <br><br>트위터에서 오신 여러분도 다른 여러 경로로 오신 여러분도 환영합니다.
 <br><br>감사합니다.<br><br></p>
-	 
+
+
+<p><br><br>추가 예정입니다.<br></p>
  <h3>관심분야</h3>
 	 
  <h3>음악</h3>
 	 
-  <p>!Hatsne Miku!</p>
+  <p><br><br>보카로 : 미쿠, 린, 렌, 루카, 유카리. 이아. 구미, 테토, 카린, 릿카, 치후유, 시유, 유니<br></p>
+
+ <h3>게임</h3>
+	 
+<p><br>모바일 게임 : 프로세카(카나데, 이치카, 시즈쿠), 블루 아카이브(유우카, 이치카), 밀리시타(아리사), 샤니마스(유이카, 린제) 말딸(디지땅)
+<br><br>컴퓨터 게임 : 하츠 오브 아이언, 워 썬더. 포르자 호라이즌, 배틀필드 등<br><br></p>
 	 
  <h3>밐빵이 옷 만들기</h3>
+<p>지금까지 무엇을 만들었나요??, 어떻게 만드나요??, 어떤 팁이 있나요?? 등등<br></p>
 </body>
 </html>
 	 
