--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <br><br>감사합니다.<br><br></p>
 
 
-<p><br><br>추가 예정입니다.<br></p>
+<p><br><br>아래는 이후 추가 예정입니다.<br></p>
  <h3>관심분야</h3>
 	 
  <h3>음악</h3>
