--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	 
 <p><br>안녕하세요. 다용도 밐서입니다.
 <br><br>'다용도'라는 이름에 걸맞게 온 사방에 관심이 많은 사람입니다.
-<br><br>트윗 대부분처럼 보컬로이드를 비롯한 음원합성엔진 음악 및 창작물에 관심이 많으며 충동구매로 테토와 릿카 SV도 보유 증입니다. 이외에도 J-POP이나 60 - 70년대 락, 80 - 90년대 동구권 락 등 상당히 짬뽕입니다.
+<br><br>트윗 대부분처럼 보컬로이드를 비롯한 음원합성엔진 음악 및 창작물에 관심이 많으며 충동구매로 테토와 릿카 SV도 보유 중입니다. 이외에도 J-POP이나 60 - 70년대 락, 80 - 90년대 동구권 락 등 상당히 짬뽕입니다.
 <br><br>게임으로 프로세카(일섭)과 블루 아카이브를 즐겨 하는 중이며 밀리, 데레, 샤니 등 아이마스도 종종 플레이 했습니다. 또한 칸코레, 벽람항로, 소녀전선 등 의인화 게임도 굉장히 열심히 하다 근 몇년에는 약간 시들해진 느낌입니다.
 <br><br>최근 오프라인 행사에 빠졌습니다. 행사 특유의 분위기, 간단히 표현하면 비슷한 사람이 많아서 참 좋게 느껴집니다. 모자이크 없는 사진을 올리지 않으면서 하기는 웃긴 이야기지만 먼저 찾아오시는 분 모두 환영합니다.
 <br><br>다행히도 '지뢰'는 정말 특이한 경우 말고는 없습니다.
